<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spot It</string>
    <string name="userlabel">Username</string>
    <string name="passlabel">Password</string>
    <string name="passagainlabel">Password Again</string>
	<string name="login_go">Go</string>
	<string name="rampe">rampe</string>
	<string name="grind">grind</string>
	<string name="block">block</string>
	<string name="sign_in">Sign In with your account</string>
	<string name="twitter">Sign In with Twitter</string>
	<string name="sign_up">Sign Up</string>
	<string name="or">Or</string>
	<string name="action_search">Search</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
</resources>

